05-containers-na-aws/doe-info-app/manifests/shark-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "service-shark"
  namespace: "shark-game"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: "shark"
