05-containers-na-aws/doe-info-app/manifests/shark-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "shark-ingress"
  namespace: "shark-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: shark-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-shark"
              servicePort: 80
